add abilities